# command-code-adapter

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
cc_adapter/: main.py
cc_adapter/admin/: config_manager.py  router.py  usage_client.py
cc_adapter/admin/static/: admin.css  admin.js  index.html
cc_adapter/command_code/: body.py  client.py  headers.py
cc_adapter/core/: auth.py  config.py  constants.py  headers.py  key_pool.py  log_buffer.py  model_fetcher.py  request_logger.py  retry.py  runtime.py  utils.py
cc_adapter/providers/anthropic/: models.py  request.py  response.py  router.py
cc_adapter/providers/openai/: request.py  responses_models.py  responses_request.py  responses_response.py  responses_router.py  router.py
cc_adapter/providers/shared/: model_mapping.py  tool_mapping.py  web_search.py
docs/superpowers/plans/: 2026-05-26-passthrough-logging.md
tests/: conftest.py  e2e_test.sh  test_admin_auth.py  test_admin_health.py  test_anthropic_integration.py  test_anthropic_translator.py  test_client_multikey.py  test_deepseek_forward.py  test_headers.py  test_log_buffer.py  test_model_fetcher.py  test_model_mapping.py  test_openai_endpoints.py  test_request_translator.py  test_response_translator.py  test_responses_integration.py  test_responses_request_translator.py  test_web_search.py
