[tool.poetry]
name = "cc-adapter"
version = "0.7.2"
description = "OpenAI Chat Completions adapter for Command Code API"
authors = ["Command Code Adapter"]
packages = [{ include = "cc_adapter" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.0"
httpx = { version = "^0.28.0", extras = ["http2"] }
pydantic = "^2.0"
pydantic-settings = "^2.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
structlog = "^25.0"

[tool.poetry.scripts]
cc-adapter = "cc_adapter.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
black = "^25.0"
respx = "^0.23.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
